--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-icon": "^1.0.0",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.4",
     "redux": "^5.0.1",
     "redux-toolkit": "^1.1.2",
     "toastify": "^2.0.1",
